Fixed remove_perm to work with querysets.

--- a/lenses/templates/lenses/lens_detail.html
+++ b/lenses/templates/lenses/lens_detail.html
@@ -663,7 +663,7 @@
       $('.sled-catalogue-checkbox:checked').each(function(i){
           data_to_plot.push( data[$(this).val()] );
       });
-      Plotly.newPlot('plot',data_to_plot,layout,{displayModeBar: false});
+      //Plotly.newPlot('plot',data_to_plot,layout,{displayModeBar: false});
   }
 
 
