Added a more informative message.

--- a/lenses/templates/lenses/lens_detail.html
+++ b/lenses/templates/lenses/lens_detail.html
@@ -474,7 +474,7 @@
 	    </div>
 	  </td>
 	  <td>
-	    Plotting is currently disabled due to CSP conflict.
+	    SLED team: Plotting is currently disabled due to a CSP conflict.
 	    <div id="plot"></div>
 	  </td>
       </table>
