Added functionality to query multiple collections with AND or OR clause.

--- a/lenses/static/lenses/css/lens_query.css
+++ b/lenses/static/lenses/css/lens_query.css
@@ -152,6 +152,13 @@ input:checked + .slider:before {
 }
 
 .management-table td:nth-child(3) {
-    width: 300px;
     padding-left: 30px;
+}
+
+.management-table td:nth-child(4) {
+    padding-left: 10px;
+}
+
+.collections-select {
+    width: 400px;
 }
