Fixing proximate lens manager and displaying only duplicates when resolving.

--- a/lenses/templates/lenses/lens_resolve_duplicates.html
+++ b/lenses/templates/lenses/lens_resolve_duplicates.html
@@ -47,6 +47,7 @@
               {{ form.index }}
             </td>
           </tr>
+	  {% comment "This is to exclude the OK lenses" %}
 	  {% else %}
           <tr class="sled-main-row sled-duplicate-yes">	  
             <td>
@@ -61,6 +62,7 @@
 	      &nbsp;
 	    </td>
 	  </tr>
+	  {% endcomment %}
 	  {% endif %}
           {% endfor %}
         </tbody>
