Duplicate task page has links to lenses, user profile page lists lenses ordered by descending created_at.

--- a/lenses/templates/lenses/lens_visit_card.html
+++ b/lenses/templates/lenses/lens_visit_card.html
@@ -5,7 +5,7 @@
   <table>
     <tr>
       <td colspan="2">
-        <h3>{{ lens.name }}</h3>
+        <h3><a href="{{ lens.get_absolute_url }}">{{lens.name}}</a></h3>
       </td>
     </tr>
     <tr>
