--- a/sled_instrument/templates/sled_instrument/instrument_create.html
+++ b/sled_instrument/templates/sled_instrument/instrument_create.html
@@ -19,14 +19,17 @@ Create new instrument?
   {% endif %}
 
   <div class="jb-modal-field">
+    {{ form.name.errors }}
     {{ form.name }}
   </div>
   
   <div class="jb-modal-field">
+    {{ form.extended_name.errors }}
     {{ form.extended_name }}
   </div>
   
   <div class="jb-modal-field">
+    {{ form.info.errors }}
     {{ form.info }}
   </div>
 
