Added functionality to delete paper and ensure exporting before.

--- a/sled_papers/templates/sled_papers/paper_delete.html
+++ b/sled_papers/templates/sled_papers/paper_delete.html
@@ -17,8 +17,9 @@ Delete paper
 
 
 {% block action_button %}
-<button type="submit" class="jb-submit-button-1">
+<button id="delete-button" type="submit" class="jb-submit-button-1">
   <img src="{% static 'icons/trash.svg' %}" >
   Delete
 </button>
 {% endblock action_button %}
+
