--- a/sled_papers/templates/sled_papers/paper_detail.html
+++ b/sled_papers/templates/sled_papers/paper_detail.html
@@ -23,7 +23,7 @@
 	<img src="{% static 'icons/columns-gap.svg' %}">
 	See collage
       </button>
-      <button type="button" id="export" class="sled-modal jb-submit-button-1" data-form-url="{% url 'sled_papers:export-csv' paper.pk %}">
+      <button type="button" id="export" class="jb-submit-button-1" data-form-url="{% url 'sled_papers:export-csv' paper.pk %}">
 	<img src="{% static 'icons/cloud-arrow-down-fill.svg' %}">
 	Export .json
       </button>
