Linked howto to github script.

--- a/sled_howto/templates/sled_howto/howto.html
+++ b/sled_howto/templates/sled_howto/howto.html
@@ -61,7 +61,7 @@
 	  Just follow these two steps:
 	  <ol>
 	    <li>
-	      Use this <a href="examples/box_search_example.ipynb">simple query script</a> to perform a query to the database at your RA,DEC.
+	      Use this <a href="https://github.com/gvernard/SLED_api/blob/master/examples/howto_simple_query.ipynb">simple query script</a> to perform a query to the database at your RA,DEC.
 	      This will identify any lenses from your sample that may already exist in the database.
 	      If such lenses are found, then before injecting your sample you may:
 	      <ul>
